crates/taim-tui/src/widgets/snapshots/taim_tui__widgets__tests__snapshot_board_different_lane_selected.snap
---
source: crates/taim-tui/src/widgets/tests.rs
assertion_line: 96
expression: buffer_to_string(&buf)
---
┌Backlog (2)────────────┐┌In Progress (1)────────┐┌Under Review (1)───────┐┌Done (2)───────────────┐
│┌─────────────────────┐││┌─────────────────────┐││┌─────────────────────┐││┌─────────────────────┐│
││Design UI mockups    ││││Implement parser     ││││Code review: auth    ││││Setup CI/CD          ││
││Create wireframes ...││││Build JSON parser ...││││Review authenticat...││││Configure GitHub A...││
│└─────────────────────┘││└─────────────────────┘││└─────────────────────┘││└─────────────────────┘│
│┌─────────────────────┐││                       ││                       ││┌─────────────────────┐│
││Write specs          │││                       ││                       │││Fix login bug        ││
││Document requirements│││                       ││                       │││Users couldn't log in││
│└─────────────────────┘││                       ││                       ││└─────────────────────┘│
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
└───────────────────────┘└───────────────────────┘└───────────────────────┘└───────────────────────┘
