crates/taim-tui/src/widgets/snapshots/taim_tui__widgets__tests__snapshot_detail_panel_empty_description.snap
---
source: crates/taim-tui/src/widgets/tests.rs
expression: buffer_to_string(&buf)
---
╭ No Description ──────────────────────╮
│Lane: Backlog  │  ○ Idle              │
│Created: 2025-01-15 10:30             │
│Updated: 2025-01-15 10:30             │
│──────────────────────────────────────│
│No description                        │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│──────────────────────────────────────│
│[Esc] Back to board  [↑↓] Scroll      │
╰──────────────────────────────────────╯
