crates/taim-tui/src/widgets/snapshots/taim_tui__widgets__tests__snapshot_detail_panel_idle.snap
---
source: crates/taim-tui/src/widgets/tests.rs
expression: buffer_to_string(&buf)
---
┌ Task Details ────────────────────────┐
│Title: Idle Task                      │
│Status: ○ Idle                        │
│Lane: Backlog                         │
│                                      │
│────────────────────────────────────  │
│                                      │
│Description:                          │
│This task is waiting to be started.   │
│It has a longer description to test   │
│text wrapping in the detail panel.    │
│                                      │
│────────────────────────────────────  │
│                                      │
│Created: 2026-01-28 14:16             │
│Updated: 2026-01-28 14:16             │
│                                      │
│[Esc] Close                           │
│                                      │
└──────────────────────────────────────┘
