crates/taim-tui/src/widgets/snapshots/taim_tui__widgets__tests__snapshot_detail_panel_inflight.snap
---
source: crates/taim-tui/src/widgets/tests.rs
expression: buffer_to_string(&buf)
---
╭ Active Task ─────────────────────────╮
│● In Progress  │  Lane: In Progress   │
│Created: 2025-01-15 10:30             │
│Updated: 2025-01-15 10:30             │
│──────────────────────────────────────│
│Work in progress on this feature.     │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│──────────────────────────────────────│
│[Esc] Back to board  [↑↓] Scroll      │
╰──────────────────────────────────────╯
