crates/taim-tui/src/widgets/snapshots/taim_tui__widgets__tests__snapshot_detail_panel_needs_attention.snap
---
source: crates/taim-tui/src/widgets/tests.rs
expression: buffer_to_string(&buf)
---
┌ Task Details ────────────────────────┐
│Title: Blocked Task                   │
│Status: ◆ Needs Attention             │
│Lane: In Progress                     │
│                                      │
│────────────────────────────────────  │
│                                      │
│Description:                          │
│Waiting for input from the product    │
│manager.                              │
│                                      │
│────────────────────────────────────  │
│                                      │
│Created: 2025-01-15 10:30             │
│Updated: 2025-01-15 10:30             │
│                                      │
│[Esc] Close                           │
│                                      │
│                                      │
└──────────────────────────────────────┘
