crates/taim-tui/src/widgets/snapshots/taim_tui__widgets__tests__snapshot_detail_panel_success.snap
---
source: crates/taim-tui/src/widgets/tests.rs
expression: buffer_to_string(&buf)
---
╭ Completed Task ──────────────────────╮
│✓ Success  │  Lane: Done              │
│Created: 2025-01-15 10:30             │
│Updated: 2025-01-15 10:30             │
│──────────────────────────────────────│
│Successfully finished and deployed.   │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│──────────────────────────────────────│
│[Esc] Back to board  [↑↓] Scroll      │
╰──────────────────────────────────────╯
